# demo-ci-cd

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  autoformat.sh  make_layer.sh  pyproject.toml  requirements.txt  samconfig.toml  template.yml
.github/workflows/: aws_lambda.yaml  ci.yml
layer/python/identify-2.5.35.dist-info/: RECORD
layer/python/nodeenv-1.8.0.dist-info/: RECORD
layer/python/pre_commit-3.6.2.dist-info/: RECORD
layer/python/virtualenv-20.25.1.dist-info/: RECORD
python_lambda_template/: index.py
tests/: trivial_test.py
